# misc-target-testing

./: Cargo.toml  README.md
.cargo/: config.toml
.embedded/: runner.toml
demo/: Cargo.toml
demo/src/: lib.rs  main.rs  unit_test_1.rs  unit_test_2.rs
demo/tests/: integration.rs
demo/tests/target_tests/: test_1.rs  test_2.rs
runner/: Cargo.toml
runner/src/: main.rs
src/: lib.rs  main.rs  unit_test_1.rs  unit_test_2.rs
tests/target_tests/: test_1.rs  test_2.rs
