[package]
name = "misc-target-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
cortex-m-semihosting = { version = "0.5.0", optional = true }
defmt = { version = "0.3.8", optional = true }
panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }
defmt-test = { version = "0.3.2", optional = true }

[dependencies.lm3s6965]
version = "0.2.0"
optional = true

[features]
use-target = ["dep:cortex-m", "dep:cortex-m-rt", "dep:lm3s6965", "dep:defmt", "dep:panic-probe", "dep:cortex-m-semihosting", "dep:defmt-test"]
test = []
target-unit-test-1 = ["use-target"]
target-unit-test-2 = ["use-target"]

[lib]
harness = false

[[test]]
name = "test_1"
path = "tests/target_tests/test_1.rs"
harness = false

[[test]]
name = "test_2"
path = "tests/target_tests/test_2.rs"
harness = false
